--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,10 +40,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    //compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:24.+'
     compile files('libs/libammsdk.jar')
-    compile files('libs/okhttp-3.4.1.jar')
-    compile files('libs/okio-1.6.0.jar')
+    //compile files('libs/okhttp-3.4.1.jar')
+    //compile files('libs/okio-1.10.0.jar')
 }
